@@ -1,0 +1,86 @@
+Overview
+--------
+
+Since Java 1.6 and PHP 5.1.4 it is possible to embed PHP into pure
+Java J2SE applications. For example it is possible to use PHP as a
+script plugin for a Java report engine such as BIRT; for formula
+fields, group selection formulas, etc.
+
+The PHP/Java Bridge can be installed with two copy operations:
+
+* the "JavaBridge.jar" and the "php-script.jar" must be copied into
+the J2SE library path and
+
+* the "java" folder containing the file "Java.php" must be copied into
+PHP include path.
+
+
+Install PHP into J2SE
+---------------------
+
+* Install Java 1.6 or above. For older Java versions you'll need the
+script-api.jar contained in the JavaBridge.war file.
+
+* Install PHP 5.1.4 or above. Or install the PHP engine written in pure
+Java (called "Quercus").
+
+* Download and extract "php-java-bridge_3.2.1_j2ee.zip" file into a
+folder and double-click on test.sh or test.bat.
+
+* Copy the created "JavaBridge.jar" and "php-script.jar" from the
+"ext" folder to the J2SE library path. On Windows the location depends
+on the version and vendor of the JDK. On Linux the directory is:
+
+  /usr/java/packages/lib/ext/
+
+
+* Copy the created "java" folder into the PHP 5 include path. On Windows
+the location depends on the version of the operating system ("winnt"
+or "windows"). On Linux the directory is:
+
+  /usr/share/pear/
+
+
+* Use the command "jrunscript" to evaluate PHP scripts from Java, for
+example:
+
+    jrunscript -l php phpFile.php 
+
+  or:
+
+    jrunscript -Dphp.java.bridge.php_exec=/usr/bin/php-cgi -l php phpFile.php
+
+
+* The optional Invocable interface is also supported. Invocable PHP
+scripts must end with the line:
+
+  java_context()->call(java_closure());
+
+Example:
+
+  ScriptEngineManager manager = new ScriptEngineManager();
+  ScriptEngine e = manager.getEngineByName("php");
+  str="<?function f() {return 'I am PHP';};java_context()->call(java_closure())?>";
+  e.eval(str);          // evaluate and hold the above script
+  i=(Invocable)e;
+  System.out.println("PHP says: " . i->invokeFunction("f", new Object[]{}));
+  e.eval((Reader)null); // release the allocated script
+
+
+* The php-script.jar also exports an "interactive" php script engine.
+It can be used to implement a REPL. Example:
+
+  ScriptEngineManager manager = new ScriptEngineManager();
+  ScriptEngine e = manager.getEngineByName("php-interactive");
+  System.out.println(e.eval("$a=122"));
+  System.out.println(e.eval("$a=$a+1;"));
+  System.out.println(e.eval("echo $a;"));
+  e.eval((Reader)null);
+
+
+* Please see the JSR 223 specification for details.
+
+* Please report bugs/problems to the mailing list:
+
+    php-java-bridge-users@lists.sourceforge.net
+
