@@ -1,19 +1,5 @@
 2006-12-03  Jost Boekemeier  <jostb@intern>
 
-	* server/TestInstallation.java: Correct output.
-
-	* server/WEB-INF/web.xml: Executable must be php-cgi.exe,
-	otherwise IBM's launcher.exe fails.
-
-	* php/java/bridge/Standalone.java: Display an option dialog, if
-	user has double-clicked on JavaBridge.jar.
-	(disclaimer): New procedure.
-
-	* php/java/bridge/StandaloneGCC.java (javaUsage): Show disclaimer.
-	
-	
-2006-12-03  Jost Boekemeier  <jostb@intern>
-
 	* api.c (session): Added optional parameter "lifetime" for
 	compatibility with the pure PHP PHP/Java Bridge implementation.
 	(get_closure): address must be unsigned long
